Packages_2024/asound2_1.2.11_(alsa)/asound/pcm.inc


function snd_async_add_pcm_handler(handler: PPsnd_async_handler_t; pcm: Psnd_pcm_t; callback: Tsnd_async_callback_t; private_data: pointer): longint; cdecl; external libasound;
function snd_async_handler_get_pcm(handler: Psnd_async_handler_t): Psnd_pcm_t; cdecl; external libasound;
function snd_pcm_info(pcm: Psnd_pcm_t; info: Psnd_pcm_info_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_current(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_free(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_current(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t): longint; cdecl; external libasound;
function snd_pcm_sw_params(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t): longint; cdecl; external libasound;
function snd_pcm_prepare(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_reset(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_status(pcm: Psnd_pcm_t; status: Psnd_pcm_status_t): longint; cdecl; external libasound;
function snd_pcm_start(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_drop(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_drain(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_pause(pcm: Psnd_pcm_t; enable: longint): longint; cdecl; external libasound;
function snd_pcm_state(pcm: Psnd_pcm_t): Tsnd_pcm_state_t; cdecl; external libasound;
function snd_pcm_hwsync(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_delay(pcm: Psnd_pcm_t; delayp: Psnd_pcm_sframes_t): longint; cdecl; external libasound;
function snd_pcm_resume(pcm: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_htimestamp(pcm: Psnd_pcm_t; avail: Psnd_pcm_uframes_t; tstamp: Psnd_htimestamp_t): longint; cdecl; external libasound;
function snd_pcm_avail(pcm: Psnd_pcm_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_avail_update(pcm: Psnd_pcm_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_avail_delay(pcm: Psnd_pcm_t; availp: Psnd_pcm_sframes_t; delayp: Psnd_pcm_sframes_t): longint; cdecl; external libasound;
function snd_pcm_rewindable(pcm: Psnd_pcm_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_rewind(pcm: Psnd_pcm_t; frames: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_forwardable(pcm: Psnd_pcm_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_forward(pcm: Psnd_pcm_t; frames: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_writei(pcm: Psnd_pcm_t; buffer: pointer; size: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_readi(pcm: Psnd_pcm_t; buffer: pointer; size: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_writen(pcm: Psnd_pcm_t; bufs: Ppointer; size: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_readn(pcm: Psnd_pcm_t; bufs: Ppointer; size: Tsnd_pcm_uframes_t): Tsnd_pcm_sframes_t; cdecl; external libasound;
function snd_pcm_wait(pcm: Psnd_pcm_t; timeout: longint): longint; cdecl; external libasound;
function snd_pcm_link(pcm1: Psnd_pcm_t; pcm2: Psnd_pcm_t): longint; cdecl; external libasound;
function snd_pcm_unlink(pcm: Psnd_pcm_t): longint; cdecl; external libasound;

const
  SND_CHMAP_API_VERSION = ((1 shl 16) or (0 shl 8)) or 1;

type
  Tsnd_pcm_chmap_type = longint;

const
  SND_CHMAP_TYPE_NONE = 0;
  SND_CHMAP_TYPE_FIXED = 1;
  SND_CHMAP_TYPE_VAR = 2;
  SND_CHMAP_TYPE_PAIRED = 3;
  SND_CHMAP_TYPE_LAST = SND_CHMAP_TYPE_PAIRED;

type
  Tsnd_pcm_chmap_position = longint;

const
  SND_CHMAP_UNKNOWN = 0;
  SND_CHMAP_NA = 1;
  SND_CHMAP_MONO = 2;
  SND_CHMAP_FL = 3;
  SND_CHMAP_FR = 4;
  SND_CHMAP_RL = 5;
  SND_CHMAP_RR = 6;
  SND_CHMAP_FC = 7;
  SND_CHMAP_LFE = 8;
  SND_CHMAP_SL = 9;
  SND_CHMAP_SR = 10;
  SND_CHMAP_RC = 11;
  SND_CHMAP_FLC = 12;
  SND_CHMAP_FRC = 13;
  SND_CHMAP_RLC = 14;
  SND_CHMAP_RRC = 15;
  SND_CHMAP_FLW = 16;
  SND_CHMAP_FRW = 17;
  SND_CHMAP_FLH = 18;
  SND_CHMAP_FCH = 19;
  SND_CHMAP_FRH = 20;
  SND_CHMAP_TC = 21;
  SND_CHMAP_TFL = 22;
  SND_CHMAP_TFR = 23;
  SND_CHMAP_TFC = 24;
  SND_CHMAP_TRL = 25;
  SND_CHMAP_TRR = 26;
  SND_CHMAP_TRC = 27;
  SND_CHMAP_TFLC = 28;
  SND_CHMAP_TFRC = 29;
  SND_CHMAP_TSL = 30;
  SND_CHMAP_TSR = 31;
  SND_CHMAP_LLFE = 32;
  SND_CHMAP_RLFE = 33;
  SND_CHMAP_BC = 34;
  SND_CHMAP_BLC = 35;
  SND_CHMAP_BRC = 36;
  SND_CHMAP_LAST = SND_CHMAP_BRC;

  SND_CHMAP_POSITION_MASK = $ffff;
  SND_CHMAP_PHASE_INVERSE = $01 shl 16;
  SND_CHMAP_DRIVER_SPEC = $02 shl 16;

type
  Tsnd_pcm_chmap_t = record
    channels: dword;
    pos: pdword;
  end;
  Psnd_pcm_chmap_t = ^Tsnd_pcm_chmap_t;

  Tsnd_pcm_chmap_query_t = record
    _type: Tsnd_pcm_chmap_type;
    map: Tsnd_pcm_chmap_t;
  end;
  Psnd_pcm_chmap_query_t = ^Tsnd_pcm_chmap_query_t;
  PPsnd_pcm_chmap_query_t = ^Psnd_pcm_chmap_query_t;

function snd_pcm_query_chmaps(pcm: Psnd_pcm_t): PPsnd_pcm_chmap_query_t; cdecl; external libasound;
function snd_pcm_query_chmaps_from_hw(card: longint; dev: longint; subdev: longint; stream: Tsnd_pcm_stream_t): PPsnd_pcm_chmap_query_t; cdecl; external libasound;
procedure snd_pcm_free_chmaps(maps: PPsnd_pcm_chmap_query_t); cdecl; external libasound;
function snd_pcm_get_chmap(pcm: Psnd_pcm_t): Psnd_pcm_chmap_t; cdecl; external libasound;
function snd_pcm_set_chmap(pcm: Psnd_pcm_t; map: Psnd_pcm_chmap_t): longint; cdecl; external libasound;
function snd_pcm_chmap_type_name(val: Tsnd_pcm_chmap_type): pchar; cdecl; external libasound;
function snd_pcm_chmap_name(val: Tsnd_pcm_chmap_position): pchar; cdecl; external libasound;
function snd_pcm_chmap_long_name(val: Tsnd_pcm_chmap_position): pchar; cdecl; external libasound;
function snd_pcm_chmap_print(map: Psnd_pcm_chmap_t; maxlen: Tsize_t; buf: pchar): longint; cdecl; external libasound;
function snd_pcm_chmap_from_string(str: pchar): dword; cdecl; external libasound;
function snd_pcm_chmap_parse_string(str: pchar): Psnd_pcm_chmap_t; cdecl; external libasound;
function snd_pcm_recover(pcm: Psnd_pcm_t; err: longint; silent: longint): longint; cdecl; external libasound;
function snd_pcm_set_params(pcm: Psnd_pcm_t; format: Tsnd_pcm_format_t; access: Tsnd_pcm_access_t; channels: dword; rate: dword;
  soft_resample: longint; latency: dword): longint; cdecl; external libasound;
function snd_pcm_get_params(pcm: Psnd_pcm_t; buffer_size: Psnd_pcm_uframes_t; period_size: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_info_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_info_malloc(ptr: PPsnd_pcm_info_t): longint; cdecl; external libasound;
procedure snd_pcm_info_free(obj: Psnd_pcm_info_t); cdecl; external libasound;
procedure snd_pcm_info_copy(dst: Psnd_pcm_info_t; src: Psnd_pcm_info_t); cdecl; external libasound;
function snd_pcm_info_get_device(obj: Psnd_pcm_info_t): dword; cdecl; external libasound;
function snd_pcm_info_get_subdevice(obj: Psnd_pcm_info_t): dword; cdecl; external libasound;
function snd_pcm_info_get_stream(obj: Psnd_pcm_info_t): Tsnd_pcm_stream_t; cdecl; external libasound;
function snd_pcm_info_get_card(obj: Psnd_pcm_info_t): longint; cdecl; external libasound;
function snd_pcm_info_get_id(obj: Psnd_pcm_info_t): pchar; cdecl; external libasound;
function snd_pcm_info_get_name(obj: Psnd_pcm_info_t): pchar; cdecl; external libasound;
function snd_pcm_info_get_subdevice_name(obj: Psnd_pcm_info_t): pchar; cdecl; external libasound;
function snd_pcm_info_get_class(obj: Psnd_pcm_info_t): Tsnd_pcm_class_t; cdecl; external libasound;
function snd_pcm_info_get_subclass(obj: Psnd_pcm_info_t): Tsnd_pcm_subclass_t; cdecl; external libasound;
function snd_pcm_info_get_subdevices_count(obj: Psnd_pcm_info_t): dword; cdecl; external libasound;
function snd_pcm_info_get_subdevices_avail(obj: Psnd_pcm_info_t): dword; cdecl; external libasound;
function snd_pcm_info_get_sync(obj: Psnd_pcm_info_t): Tsnd_pcm_sync_id_t; cdecl; external libasound;
procedure snd_pcm_info_set_device(obj: Psnd_pcm_info_t; val: dword); cdecl; external libasound;
procedure snd_pcm_info_set_subdevice(obj: Psnd_pcm_info_t; val: dword); cdecl; external libasound;
procedure snd_pcm_info_set_stream(obj: Psnd_pcm_info_t; val: Tsnd_pcm_stream_t); cdecl; external libasound;

function snd_pcm_hw_params_any(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_mmap_sample_resolution(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_double(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_batch(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_block_transfer(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_monotonic(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_overrange(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_pause(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_resume(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_half_duplex(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_joint_duplex(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_sync_start(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_can_disable_period_wakeup(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_is_perfect_drain(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_supports_audio_wallclock_ts(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_supports_audio_ts_type(params: Psnd_pcm_hw_params_t; _type: longint): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_rate_numden(params: Psnd_pcm_hw_params_t; rate_num: Pdword; rate_den: Pdword): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_sbits(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_fifo_size(params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;

function snd_pcm_hw_params_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_hw_params_malloc(ptr: PPsnd_pcm_hw_params_t): longint; cdecl; external libasound;
procedure snd_pcm_hw_params_free(obj: Psnd_pcm_hw_params_t); cdecl; external libasound;
procedure snd_pcm_hw_params_copy(dst: Psnd_pcm_hw_params_t; src: Psnd_pcm_hw_params_t); cdecl; external libasound;
